--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -125,10 +125,11 @@ p.style1 { font-family: 'Roboto Condensed', sans-serif; font-size: 19px; color: 
 .logo img { display: block; width: 100%; height: auto; }
 .main-menu{height:80px;position:relative;width:100%;}
 .main-menu .bgr-icon{font-size:30px;color:#ed5164;padding:6px 8px;border:1px solid #ed5164;top:8px;cursor:pointer;
-position:absolute;border-radius:0;left:0px;z-index:999999;background-color:#fff;}
+position:absolute;border-radius:0;left:0px;z-index:999999;background-color:#fff;line-height:1.1;}
 .main-menu .main-menu-content { display: none;}
 .main-menu .main-menu-content #nav {position:absolute; top: 88px; left: 0; width: 100%; background-color: #fff; z-index: 555; }
-body.canvas-slid #disable_view{position: fixed;z-index: 9998;background-color: rgba(0, 0, 0, 0.35);height: 100%;width: 100%;display: block;}
+body.canvas-slid #disable_view{position:fixed;z-index:9998;background-color:rgba(0, 0, 0, 0.35);height:100%;width:100%;
+display:block;}
 #nav:after { display: block; content: ''; clear: both; }
 #nav ol { margin: 0; padding: 0; list-style: none;/*	letter-spacing: -1px;*/ text-transform: uppercase; font: 15px/21px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 #nav ol > li { display: block; margin: 0;border-bottom:1px solid #333;}
@@ -168,8 +169,13 @@ body.canvas-slid #disable_view{position: fixed;z-index: 9998;background-color: r
 #header .cart .btn-holder a { display: block; padding: 5px 10px; margin: 0 16px; background: #ef4f61; text-transform: uppercase; color: #fff; position: relative; border: 3px solid #ef4f61; font: bold 14px/18px Arial, Helvetica, sans-serif; }
 #header .cart .btn-holder a:hover { text-decoration: none; border-color: #000; }
 #header .bottom-area { text-align: right; padding: 55px 0 10px; }
-.search-form { margin: 0 0 0 5px; padding: 3px 5px; border: 1px solid #000; width: 140px; overflow: hidden; display: inline-block; vertical-align: top; position: relative; z-index: 22; }
-.search-form input[type="text"] { margin: 0; padding: 0; background: none; border: none; width: 115px; height: 11px; font-size: 9px; line-height: 11px; float: right; outline: none; }
+#header #search_mini_form{display:none;}
+.search-form { margin:5px auto; padding:6px; border-top:1px solid #eee; width: 100%; overflow: hidden; display:block;
+vertical-align: top;position: relative; z-index: 22; }
+a.search-icon.glyphicon.glyphicon-search {color: #fff;background: #2E2A2B;padding: 15px 12px 16px;vertical-align: top;top: 25px;
+left: 4px;font-size: 14px;}
+.search-form input[type="text"] { margin: 0; padding: 0; background: none; border: none; width: 90%; height: 18px; font-size: 11px;
+line-height:1; float: right; outline: none; }
 .search-form input[type="submit"] { background: url(images/productpage/search.png) no-repeat; float: left; border: none; margin: 0; padding: 0; font-size: 0; line-height: 0; width: 11px; height: 11px; }
 .search-form input[type="submit"]:hover { background: url(images/productpage/search.png) no-repeat; }
 #header .login-area { display: inline-block; vertical-align: top; position: relative; }
