--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -171,7 +171,9 @@ display:block;}
 #header .bottom-area { text-align: right; padding: 55px 0 10px; }
 #header #search_mini_form{display:none;}
 .search-form { margin:5px auto; padding:6px; border-top:1px solid #eee; width: 100%; overflow: hidden; display:block;
-vertical-align: top;position: relative; z-index: 22; }
+vertical-align: top;position: relative; z-index: 22;max-width:100%; }
+.searchautocomplete .searchautocomplete-placeholder{position: relative;top:5px;}
+.searchautocomplete .searchautocomplete-loader{top:7px;}
 a.search-icon.glyphicon.glyphicon-search {color: #fff;background: #2E2A2B;padding: 15px 12px 16px;vertical-align: top;top: 25px;
 left: 4px;font-size: 14px;}
 .search-form input[type="text"] { margin: 0; padding: 0; background: none; border: none; width: 90%; height: 18px; font-size: 11px;
