--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -172,8 +172,10 @@ display:block;}
 #header #search_mini_form{display:none;}
 .search-form { margin:5px auto; padding:6px; border-top:1px solid #eee; width: 100%; overflow: hidden; display:block;
 vertical-align: top;position: relative; z-index: 22;max-width:100%; }
-.searchautocomplete .searchautocomplete-placeholder{position: relative;top:5px;width:100%;}
+.searchautocomplete .searchautocomplete-placeholder{position: relative;top:5px;width:100%;z-index:5000;}
 .searchautocomplete .searchautocomplete-loader{top:7px;}
+.searchautocomplete .nav .nav-input input.input-text.UI-SEARCH{font-size:16px;font-weight:300;letter-spacing:-0.5px;color:#555;
+font-family:"Roboto Condensed", Helvetica, Arial, sans-serif;}
 a.search-icon.glyphicon.glyphicon-search {color: #fff;background: #2E2A2B;padding: 15px 12px 16px;vertical-align: top;top: 25px;
 left: 4px;font-size: 14px;}
 .search-form input[type="text"] { margin: 0; padding: 0; background: none; border: none; width: 90%; height: 18px; font-size: 11px;
