--- a/app/design/frontend/creo_mobile/default/template/page/html/head.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/head.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 <meta http-equiv="Content-Type" content="<?php echo $this->getContentType() ?>" />
-<meta name="viewport" content="initial-scale=1.0, width=device-width" />
+<meta name="viewport" content="initial-scale=1.0, width=device-width, maximum-scale=1.0" />
 <title><?php echo $this->getTitle() ?></title>
 <meta name="description" content="<?php echo htmlspecialchars($this->getDescription()) ?>" />
 <meta name="keywords" content="<?php echo htmlspecialchars($this->getKeywords()) ?>" />
