--- a/skin/frontend/creo_mobile/default/custom.css
+++ b/skin/frontend/creo_mobile/default/custom.css
@@ -717,8 +717,8 @@ padding: 0;}
 .card-date-month { width:115px;}
 .checkout-heading { border: none !important;}
 .onestepcheckout-index-index form select { position: static;}
-#checkout-payment-method-load .paymentradiobutton, #checkout-payment-method-load .paymentradiobuttonlabel {
-float: left; margin: 0 5px 0 0;}
+#checkout-payment-method-load input[type="radio"].paymentradiobutton,
+#checkout-payment-method-load input[type="radio"].paymentradiobuttonlabel{float: left; margin: 0 5px 0 0;}
 .option-alternate:nth-last-child(2) {display: none;}
 .checkout-cart-index .checkout_applyCoupon { display: none;}
 #coupon-discount { float: left; width:100%;}
