--- a/skin/frontend/creo_mobile/default/attributeswatches/attributeswatches.css
+++ b/skin/frontend/creo_mobile/default/attributeswatches/attributeswatches.css
@@ -34,7 +34,7 @@
     box-shadow: 3px 3px 5px #aaa;
     color: #333;
     cursor: pointer;
-    display: block;
+    display: block !important;
     filter: alpha(opacity=100);
     float: left;
     opacity: 1;
