--- a/skin/frontend/creo/default/attributeswatches/attributeswatches.css
+++ b/skin/frontend/creo/default/attributeswatches/attributeswatches.css
@@ -34,12 +34,12 @@
     box-shadow: 3px 3px 5px #aaa;
     color: #333;
     cursor: pointer;
-    display: block;
+    display: block !important;
     filter: alpha(opacity=100);
     float: left;
     opacity: 1;
 }
-
+body.categorypath-create-caps-html .product-swatches-container li a{display:none;}
 .product-swatches-container li a.active.out-of-stock{
     filter: alpha(opacity=60);
     opacity: 0.6;
