--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -1044,7 +1044,10 @@ width: 100%;
 .products-grid { z-index: 9; position: relative;}
 #product-gallery-container .bx-wrapper ul.slides li { width:auto !important;}
 #product-options-wrapper { float: left; width: 75%;}
-#product-options-wrapper .product-swatches-container ul.has-swatches li a { margin-top: 0 !important; padding-top: !important; height: 25px; width: 25px; line-height: 25px; background-position: 50% 50%;}
+#product-options-wrapper .product-swatches-container ul.has-swatches li a { margin-top: 0 !important; padding-top:0 !important;
+line-height: 25px; background-position: 50% 50%;height:90px !important; width:90px !important;background-size:cover;}
+#product-options-wrapper .product-swatches-container ul.has-swatches li a.selected{
+border: 1px solid #F16167;background-size: 95% 95%;background-repeat: no-repeat;}
 .attributeItem { float: left; width:50%;}
 .catalog-product-view .bx-controls.bx-has-controls-direction { display: none;}
 .bx-wrapper  { background: #fff none repeat scroll 0 0;
