--- a/app/locale/en_US/template/email/newsletter_subscr_success.html
+++ b/app/locale/en_US/template/email/newsletter_subscr_success.html
@@ -2,13 +2,20 @@
 
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
-
-<table cellpadding="0" cellspacing="0" border="0">
-    <tr>
-        <td class="action-content">
-            <h4>You have been successfully subscribed to the newsletter.</h4>
-        </td>
-    </tr>
-</table>
-
+<!-- Begin wrapper table -->
+<h1 style="font-size: 18px; font-weight: 700; font-family: 'Roboto Condensed', sans-serif; color: #fff;">CREO</h1>
+</td><!-- header End -->
+</tr>
+<tr>
+<td colspan="3">
+               <h1 style="font-weight: normal;font-size:22px;">YOU GOT CREO...</h1>
+               <p style="font-family: 'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px;  margin-bottom: 20px;">Hi</p>
+               <p style=" font-family:'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px;margin-bottom:20px;">Thank you for subscribing with creoroom.com. Here is your 20% off coupon code</p>
+               <p style=" font-family: 'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px;"><span style="text-align: center; display: block; background-color: #e1e1e1; font-family: 'Roboto Condensed', sans-serif;font-size: 18px; font-weight: normal; line-height: 30px; color: #000; margin: 25px 0; padding: 10px 0;">COUPON CODE: {{block type="cms/block" block_id="coupon-code"}}</span></p>
+               <p style="font-family: 'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px; margin-top:30px;">Our team is here for you. If you need any kind of assistance, we’re here to help. Drop us a line at  <span style="color: rgb(241, 107, 122);"> {{config path="trans_email/ident_general/email"}} </span> or give our customer care a call on <span style="color: rgb(241, 107, 122);"> {{var store_phone}} (International).</span>
+               </p>
+               <h3 style="text-transform: uppercase; font-family: 'Roboto Condensed', sans-serif; color: rgb(241, 107, 122); font-size: 14px; margin-bottom: 0;">-be you-</h3>
+               <p class="creo-room" style=" font-family: 'Roboto Condensed', sans-serif;font-size: 14px;font-weight: normal;margin: 0;padding: 0;line-height: 30px; font-size: 14px; text-transform: capitalize; color: rgb(0, 0, 0);margin-bottom: 40px;"> creo room</p>
+         </td>        
+ </tr>
 {{template config_path="design/email/footer"}}
