--- a/app/design/frontend/creo/default/template/extensions/collections/women.new.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/women.new.phtml
@@ -31,29 +31,44 @@
  * @see Mage_Catalog_Block_Product_List
  */
 ?>
+
+<div class="row">
+<div class="col-xs-12">
+<nav class="breadcrumb1">
+    <ul>
+        <li class="home"><a title="Go to Home Page" href="<?php echo Mage::getBaseUrl(); ?>">Home</a></li>
+        <li class="category3"><a title="Collections" href="<?php echo Mage::getBaseUrl() . "collections/index/categories" ?>">Collections</a></li>
+        <li class="category17"><strong>Women</strong></li>
+    </ul>
+</nav>
+</div>
+</div>
 <?php
 $_attrbiuteCollection = $this->getLoadedAttributeCollection();
-
 ?>
-<div class="cate-drop-holder">
+<div class="cate-drop-holder" id="fme_filters_list">
+<?php
+$currentUrl = Mage::helper('core/url')->getCurrentUrl();
+//echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
+?>
+<div class="cate-open-close">
 <span class="search-by">Search By Design</span>
-<div class="cate-drop-frame">
-<a href="javascript:;" class="opener"> View All</a>
-<ul>
+<a class="opener attribure_labels" data-id="collection-mega-menu"> View All</a>
+<ul id="collection-mega-menu" class="slide m-filter-item-list">
     <?php foreach ($_attrbiuteCollection as $a): ?>
         <li>
             <?php if ($a['value']): ?>
-                <a href="<?php echo Mage::getBaseUrl() . "clothing.html/?universal_categories=".$a['value']."" ?>"><?php echo $a['label']; ?></a>
+                <a href="<?php echo Mage::getBaseUrl() . "clothing/women.html?universal_categories=".$a['value']."" ?>"><?php echo $a['label']; ?></a>
             <?php else: 
 			?>
-            <a href="<?php echo Mage::getBaseUrl() . "clothing.html" ?>">View All</a>
+            <a href="<?php echo Mage::getBaseUrl() . "clothing/women.html" ?>">View All</a>
             <?php endif; ?>
         </li>
     <?php endforeach ?>
 </ul>
 </div>
 </div>
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 <?php
 $_productCollection = $this->getLoadedProductCollection();
@@ -68,20 +83,38 @@ $_helper = $this->helper('catalog/output');
         <?php // List mode  ?>
         <?php if ($this->getMode() != 'grid'): ?>
             <?php $_iterator = 0; ?>
-            <ol class="products-list products-grid" id="products-list">
+            <div class="row">
+            <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <?php /* ?>
+            <h3 class="inline-h"><span>TOP TRENDS</span></h3>
+            <div class="carousel-creo carousel4 trends-carousel">
+            <div class="mask">
+            <div class="slideset products-grid" id="products-list">
+            <!-- <ol class="products-list products-grid" id="products-list"> -->
             <?php foreach ($_productCollection as $_product): ?>
-                    <li class="item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
+                    <div class="slide item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
                         <div class="list_product_img">
-                            <a  href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image image-area"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(480, 650); ?>" width="414" height="500" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), true, true) ?>" />
+                            <a  href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image image-area"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(480, 650); ?>" width="414" height="500" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), true, true) ?>" ></a>
+                        <div class="btn-holder">
+                            <?php if ($this->helper('wishlist')->isAllow()) : ?>
+                                    <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="link-wishlist"><span class="span1"><span class="span2"><i class="icon-heart-empty"></i></span></span></a> 
+                                <?php endif; ?>
+                                <a href="javascript:;" onclick="setLocation('<?php echo $this->helper('checkout/cart')->getAddUrl($_product) ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a> 
+                        </div>
                         </div>
                         <div class="text-area">
                             <h3><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h3>
                             <span class="price"><?php echo Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?></span>
-
                         </div>
-                    </li>
+                    </div>
         <?php endforeach; ?>
-            </ol>
+            <!-- </ol> -->
+            </div>
+            </div>
+            <a class="btn-prev" href="#"><i class="icon-angle-left"></i></a>
+            <a class="btn-next" href="#"><i class="icon-angle-right"></i></a>
+            </div><?php */ ?>
+            </div>
             <script type="text/javascript">decorateList('products-list', 'none-recursive')</script>
 
     <?php else: ?>
@@ -137,25 +170,19 @@ $_helper = $this->helper('catalog/output');
                         <div class="text-area">
                             <h3><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h3>
                             <span class="price"><?php echo Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?></span>
-
-                            <div class="btn-holder"> 
+                            <div class="btn-holder">
                                 <?php if ($this->helper('wishlist')->isAllow()) : ?>
-                                    <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="link-wishlist"><span class="span1"><span class="span2"><i class="icon-heart-empty"></i></span></span></a> 
+                                    <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="link-wishlist"><span class="span1"><span class="span2"><i class="icon-heart-empty"></i></span></span></a>
                                 <?php endif; ?>
                                 <?php //if (!($_product->getTypeInstance(true)->hasRequiredOptions($_product) || $_product->isGrouped())) { ?>
                                     <!--<a href="javascript:;" onclick="setLocationAjax('<?php echo $this->getAddToCartUrl($_product) ?>', '<?php echo $_product->getId() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>-->
                                 <?php //} else { ?>
                                 <?php if($_product->isConfigurable()){ ?> 
                                 <a href="javascript:;" onclick="setLocation('<?php echo $_product->getProductUrl() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>
-                                <?php
-								}else{
-								?>
+                                <?php }else{ ?>
                                     <a href="javascript:;" onclick="setLocation('<?php echo $this->helper('checkout/cart')->getAddUrl($_product) ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>
-                                    <?php
-								}
-									?>
+                                    <?php } ?>
                                 <?php //} ?>
-
                             </div>
                         </div>
                     </li>
@@ -165,12 +192,9 @@ $_helper = $this->helper('catalog/output');
             <?php endforeach ?>
             <script type="text/javascript">decorateGeneric($$('ul.products-grid'), ['odd', 'even', 'first', 'last'])</script>
         <?php endif; ?>
-
         <div class="toolbar-bottom">
             <?php //echo $this->getToolbarHtml() ;
-			
-//				echo $this->getToolbarBlock()->setTemplate('catalog/product/list/toolbar-bottom.phtml')->toHtml() ;
-			?>
+            //echo $this->getToolbarBlock()->setTemplate('catalog/product/list/toolbar-bottom.phtml')->toHtml() ;?>
         </div>
     </div>
 <?php endif; ?>
@@ -197,9 +221,16 @@ $_helper = $this->helper('catalog/output');
     <?php foreach ($_attrbiuteCollection as $a): ?>
 
             <?php if ($a['value']): ?>
+            <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a['value']); ?>
+            <?php
+			$imgurl =  $this->escapeHtml($_img);
+			if(!$_img){
+			continue;
+			}
+			?>
         <li>
 	            <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a['value']); ?>
-				<a href="<?php // echo Mage::getBaseUrl() . "clothing.html/?universal_categories=".$a['value']."" ?>">
+				<a href="<?php echo Mage::getBaseUrl() . "clothing/women.html?universal_categories=".$a['value']."" ?>">
 				<?php if ($_img): ?>
                     <img src="<?php echo $this->escapeHtml($_img); ?>" alt="<?php echo $a['label']; ?>" />
                 <?php endif; ?>
@@ -217,13 +248,3 @@ $_helper = $this->helper('catalog/output');
 </div>
 </div>
 </div>
-<style>
-.design_categories_attributes {}
-.design_categories_attributes ul { float: left; width: 100%; padding: 0; margin: 0;}
-.design_categories_attributes ul li { width: 24.25%; display: inline-block; margin: 0 1% 16px 0;}
-.design_categories_attributes ul li:nth-child(4n) { margin-right: 0;}
-.design_categories_attributes ul li img { width: 100%;}
-
-</style>
-
-
