--- a/app/design/frontend/creo/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/men.phtml
@@ -56,16 +56,19 @@ $currentUrl = Mage::helper('core/url')->getCurrentUrl();
 <span class="search-by">Search By Design</span>
 <a class="opener attribure_labels" data-id="collection-mega-menu"> View All</a>
 <ul id="collection-mega-menu" class="slide m-filter-item-list">
+<?php $attr = Mage::getModel('eav/config')->getAttribute('catalog_product', 'universal_categories'); ?>
+
+<li>
+   <a href="<?php echo Mage::getBaseUrl() . "clothing/men.html" ?>">View All</a>
+</li>
     <?php foreach ($_attrbiuteCollection as $a): ?>
         <li>
-            <?php if ($a['value']): ?>
-                <a href="<?php echo Mage::getBaseUrl() . "clothing/men.html?universal_categories=".$a['value']."" ?>"><?php echo $a['label']; ?></a>
-            <?php else: 
-			?>
-            <a href="<?php echo Mage::getBaseUrl() . "clothing/men.html" ?>">View All</a>
-            <?php endif; ?>
+
+                <a href="<?php echo Mage::getBaseUrl() . "clothing/men.html?universal_categories=".$a."" ?>"><?php echo $attr->getSource()->getOptionText($a); ?></a>
+                        
         </li>
     <?php endforeach ?>
+
 </ul>
 </div>
 </div>
@@ -80,7 +83,7 @@ $_helper = $this->helper('catalog/output');
     <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
     <div class="category-products">
-        <?php echo $this->getToolbarHtml() ?>
+    <?php echo $this->getToolbarHtml() ?>
         <?php // List mode  ?>
         <?php if ($this->getMode() != 'grid'): ?>
             <?php $_iterator = 0; ?>
@@ -118,7 +121,7 @@ $_helper = $this->helper('catalog/output');
             </div>
             <script type="text/javascript">decorateList('products-list', 'none-recursive')</script>
 
-        <?php else: ?>
+    <?php else: ?>
             <script>
                 function setLocationAjax(url, id) {
                     url += 'isAjax/1';
@@ -153,50 +156,50 @@ $_helper = $this->helper('catalog/output');
             </script>
         <?php // Grid Mode   ?>
 
-        <?php $_collectionSize = $_productCollection->count() ?>
-        <?php
-        $_columnCount = 4;
-        //$this->getColumnCount();
-        ?>
-        <?php $i = 0;
-        foreach ($_productCollection as $_product): ?>
-        <?php if ($i++ % $_columnCount == 0): ?>
-            <ul class="products-grid">
-        <?php endif ?>
-            <li class="item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
+            <?php $_collectionSize = $_productCollection->count() ?>
+            <?php
+            $_columnCount = 4;
+            //$this->getColumnCount(); 
+            ?>
+            <?php $i = 0;
+            foreach ($_productCollection as $_product): ?>
+                <?php if ($i++ % $_columnCount == 0): ?>
+                    <ul class="products-grid">
+                    <?php endif ?>
+                    <li class="item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
 
-                <a  href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image image-area"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(480, 650); ?>" width="414" height="500" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), true, true) ?>" />
-                </a>
-                <a  rel="nofollow" href="<?php echo Mage::getBaseUrl() . 'quickview/index/view?pid=' . $_product->getId(); ?>" data-fancybox-type="iframe" class="mp_quickview_icon" id="mp_quickview_<?php echo $_product->getId() ?>"> <span class="quick-view"><i class="icon-search"></i> quick view</span></a>
-                <div class="text-area">
-                    <h3><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h3>
-                    <span class="price"><?php echo Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?></span>
+                        <a  href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image image-area"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(480, 650); ?>" width="414" height="500" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), true, true) ?>" />
+                        </a>
+                        <a  rel="nofollow" href="<?php echo Mage::getBaseUrl() . 'quickview/index/view?pid=' . $_product->getId(); ?>" data-fancybox-type="iframe" class="mp_quickview_icon" id="mp_quickview_<?php echo $_product->getId() ?>"> <span class="quick-view"><i class="icon-search"></i> quick view</span></a>
+                        <div class="text-area">
+                            <h3><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h3>
+                            <span class="price"><?php echo Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?></span>
 
-                    <div class="btn-holder">
-                        <?php if ($this->helper('wishlist')->isAllow()) : ?>
-                            <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="link-wishlist"><span class="span1"><span class="span2"><i class="icon-heart-empty"></i></span></span></a>
-                        <?php endif; ?>
-                        <?php //if (!($_product->getTypeInstance(true)->hasRequiredOptions($_product) || $_product->isGrouped())) { ?>
-                        <!--<a href="javascript:;" onclick="setLocationAjax('<?php echo $this->getAddToCartUrl($_product) ?>', '<?php echo $_product->getId() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>-->
-                        <?php //} else { ?>
-                        <?php if($_product->isConfigurable()){ ?>
-                            <a href="javascript:;" onclick="setLocation('<?php echo $_product->getProductUrl() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>
-                            <?php
-                        }else{
-                            ?>
-                            <a href="javascript:;" onclick="setLocation('<?php echo $this->helper('checkout/cart')->getAddUrl($_product) ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>
-                            <?php
-                        }
-                        ?>
-                        <?php //} ?>
+                            <div class="btn-holder"> 
+                                <?php if ($this->helper('wishlist')->isAllow()) : ?>
+                                    <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="link-wishlist"><span class="span1"><span class="span2"><i class="icon-heart-empty"></i></span></span></a> 
+                                <?php endif; ?>
+                                <?php //if (!($_product->getTypeInstance(true)->hasRequiredOptions($_product) || $_product->isGrouped())) { ?>
+                                    <!--<a href="javascript:;" onclick="setLocationAjax('<?php echo $this->getAddToCartUrl($_product) ?>', '<?php echo $_product->getId() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>-->
+                                <?php //} else { ?>
+                                <?php if($_product->isConfigurable()){ ?> 
+                                <a href="javascript:;" onclick="setLocation('<?php echo $_product->getProductUrl() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>
+                                <?php
+								}else{
+								?>
+                                    <a href="javascript:;" onclick="setLocation('<?php echo $this->helper('checkout/cart')->getAddUrl($_product) ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>
+                                    <?php
+								}
+									?>
+                                <?php //} ?>
 
-                    </div>
-                </div>
-            </li>
-            <?php if ($i % $_columnCount == 0 || $i == $_collectionSize): ?>
-            </ul>
-        <?php endif ?>
-        <?php endforeach ?>
+                            </div>
+                        </div>
+                    </li>
+                    <?php if ($i % $_columnCount == 0 || $i == $_collectionSize): ?>
+                    </ul>
+                <?php endif ?>
+            <?php endforeach ?>
             <script type="text/javascript">decorateGeneric($$('ul.products-grid'), ['odd', 'even', 'first', 'last'])</script>
         <?php endif; ?>
 
@@ -225,12 +228,11 @@ $_helper = $this->helper('catalog/output');
 <div class="row">
 <div class="col-xs-12">
 <div class="design_categories_attributes shipping-methods">
+
 <h3><span>DESIGN CATEGORIES</span></h3>
 <ul>
-    <?php foreach ($_attrbiuteCollection as $a): ?>
-
-            <?php if ($a['value']): ?>
-            <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a['value']); ?>
+ <?php foreach ($_attrbiuteCollection as $a): ?>
+            <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a); ?>
             <?php
 			$imgurl =  $this->escapeHtml($_img);
 			if(!$_img){
@@ -238,20 +240,14 @@ $_helper = $this->helper('catalog/output');
 				}
 			?>
         <li>
-	            <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a['value']); ?>
-				<a href="<?php echo Mage::getBaseUrl() . "clothing/men.html?universal_categories=".$a['value']."" ?>">
+	            <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a); ?>
+				<a href="<?php echo Mage::getBaseUrl() . "clothing/men.html?universal_categories=".$a."" ?>">
 				<?php if ($_img): ?>
-                    <img src="<?php echo $this->escapeHtml($_img); ?>" alt="<?php echo $a['label']; ?>" />
+                    <img src="<?php echo $this->escapeHtml($_img); ?>" alt="" />
                 <?php endif; ?>
                 
                 <?php // echo $a['label']; ?></a>
-                
-            <?php else: 
-			?>
-           <?php /*?> <a href="<?php echo Mage::getBaseUrl() . "clothing.html" ?>">View All</a><?php */?>
-         
-        </li>
-            <?php endif; ?> 
+                 
     <?php endforeach ?>
 </ul>
 </div>
