--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -185,7 +185,8 @@ if ($_product->type_id == 'configurable' && $_GET['styles']==22) {
                             <h3><a href="<?php echo $_product->getProductUrl() ?>?styles=22" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h3>
                         <?php }else{ ?>
 
-                            <h3><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h3>
+                            <h3><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a>
+                            </h3>
                          <?php } ?>
                         
                             <span class="price"><?php echo Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?></span>
@@ -219,10 +220,9 @@ if ($_product->type_id == 'configurable' && $_GET['styles']==22) {
         <?php endif; ?>
 
         <div class="toolbar-bottom">
-            <?php echo $this->getToolbarHtml() ;
-			
-				echo $this->getToolbarBlock()->setTemplate('catalog/product/list/toolbar-bottom.phtml')->toHtml() ;
-			?>
+            <?php //echo $this->getToolbarHtml() ;
+	echo $this->getToolbarBlock()->setTemplate('catalog/product/list/toolbar-bottom.phtml')->toHtml() ;
+	?>
         </div>
     </div>
 <?php endif; ?>
