--- a/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
@@ -138,10 +138,12 @@
   <label><?php echo $this->__('Sort By') ?></label>
   <select onchange="setLocation(this.value)" title="<?php echo $this->__('Sort By') ?>">
   <?php foreach($this->getAvailableOrders() as $_key=>$_order): ?>
+    <?php if($_order == 'Position'){ $_order='Latest';}?>
   <option value="<?php echo $this->getOrderUrl($_key, 'asc') ?>"<?php if($this->isOrderCurrent($_key)): ?> selected="selected"<?php endif; ?>>
   <?php echo $this->__($_order) ?>
   </option>
   <?php endforeach; ?>
+
   </select>
   <?php if($this->getCurrentDirection() == 'desc'): ?>
   <a href="<?php echo $this->getOrderUrl(null, 'asc') ?>" class="sort-by-switcher sort-by-switcher--desc" title="<?php echo $this->__('Set Ascending Direction') ?>"><?php //echo $this->__('Set Ascending Direction') ?></a>
